# cg2-light

./: CMakeLists.txt  c2ga.conf
GLImac-Template/: CMakeLists.txt
GLImac-Template/src/: CMakeLists.txt  GLObject  GLObject.hpp  c2gaTools.hpp  cga.hpp  declarations.hpp  gl_misc.hpp  instance.hpp  main.cpp  optics.cpp  optics.hpp  tree.hpp
GLImac-Template/src/shaders/: 2D.fs.glsl  2D_instancied.vs.glsl
src/: Entry.cpp  Entry.hpp  Geogebra_c3ga.cpp  Geogebra_c3ga.hpp  main.cpp
